# Tabulix

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: tabulixConfig.cmake.in
docs/: index.md
docs/api/: table.md
examples/: CMakeLists.txt  advanced_example.cpp  basic_example.cpp  intro_example.cpp
include/tabulix/: tabulix.hpp
include/tabulix/core/: cell.hpp  row.hpp  table.hpp
include/tabulix/export/: exporter.hpp
include/tabulix/styling/: alignment.hpp  border.hpp  theme.hpp
src/core/: cell.cpp  row.cpp  table.cpp
src/export/: exporter.cpp
src/styling/: border.cpp  theme.cpp
tests/: CMakeLists.txt  border_tests.cpp  exporter_tests.cpp  table_tests.cpp
